--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,7 @@
                 <td>{{ obj.username }}</td>
                 <td>{{ obj.psw }}</td>
                 <td>
-                    <form action="/delete/{{ obj.id }}" method="post" style="display:inline;">
+                    <form action="/delete/{{ obj.id }}" method="post" style="display:inline-block;">
                         <button class="btn btn-danger btn-sm" onclick="return confirm('Delete?')">Delete</button>
                     </form>
                     {% if obj.url %}
@@ -59,8 +59,49 @@
                     {% else %}
                         <button class="btn btn-secondary btn-sm ms-2" disabled>Preview</button>
                     {% endif %}
+                    <a href="/modify/{{ obj.id }}" class="btn btn-warning btn-sm ms-2">Modify</a>
                 </td>
             </tr>
+
+            <!-- Edit Modal -->
+            <div class="modal fade" id="editModal{{ obj.id }}" tabindex="-1" aria-labelledby="editModalLabel{{ obj.id }}" aria-hidden="true">
+              <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                  <form method="POST" action="/modify/{{ obj.id }}">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="editModalLabel{{ obj.id }}">Modify Object</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <div class="modal-body">
+                    <div class="mb-3">
+                      <label class="form-label">Name</label>
+                      <input type="text" class="form-control" name="name" value="{{ obj.name }}" required>
+                    </div>
+                    <div class="mb-3">
+                      <label class="form-label">Description</label>
+                      <input type="text" class="form-control" name="description" value="{{ obj.description }}">
+                    </div>
+                    <div class="mb-3">
+                      <label class="form-label">URL</label>
+                      <input type="text" class="form-control" name="url" value="{{ obj.url }}">
+                    </div>
+                    <div class="mb-3">
+                      <label class="form-label">Username</label>
+                      <input type="text" class="form-control" name="username" value="{{ obj.username }}">
+                    </div>
+                    <div class="mb-3">
+                      <label class="form-label">Password</label>
+                      <input type="password" class="form-control" name="psw" value="{{ obj.psw }}">
+                    </div>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="submit" class="btn btn-primary">Save changes</button>
+                  </div>
+                  </form>
+                </div>
+              </div>
+            </div>
         {% endfor %}
         </tbody>
     </table>
